[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "322"
dynamic = ["version"]
requires-python = ">= 3.11"
authors = [ # put your name, email here!
    {name = "Gavin Travis", email = "gavin.travis@wsu.edu"},
]
dependencies = [

]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "isort",
    "pyright",
]

[project.scripts]
load_data = "scripts.load_data.load:main"

[tool.setuptools.packages.find]
where = ["big_data"]

[tool.ruff]
line-length = 80 # max line length
select = [
    "E", # code style errs
    "W", # code style warnings
    "F", # pyflakes issues -> fancy set of rules
    "D", # doc string rules
    "N", # pep8 naming conventions
    "B", # bugbear errs -> more fancy rules
]
exclude = [".venv", "*.md", ".egg*", ".git", ".gitignore"] # stuff not to lint + format

[tool.pyright]
venvPath = "."
venv = ".venv/"
