[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "322"
dynamic = ["version"]
requires-python = ">= 3.11"
authors = [ # put your name, email here!
    {name = "Gavin Travis", email = "gavin.travis@wsu.edu"},
    {name = "Dylan Kopitzke", email = "dylan.kopitzke@wsu.edu"},
]
dependencies = [
    "pymongo >= 4.0.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "isort",
    "pyright",
]

[project.scripts]
load_data = "scripts.load_data.load:main"
load_data_mongo = "scripts.load_data.mongo_loader:main"

[tool.setuptools.packages.find]
where = ["big_data"]

[tool.ruff]
line-length = 120 # max line length
lint.select = [
    "E", # code style errs
    "W", # code style warnings
    "F", # pyflakes issues -> fancy set of rules
    "D", # doc string rules
    "N", # pep8 naming conventions
    "B", # bugbear errs -> more fancy rules
]
exclude = [".venv", "*.md", ".egg*", ".git", ".gitignore"] # stuff not to lint + format

[tool.pyright]
venvPath = "."
venv = ".venv/"
